# quizler

./: README.md
backend/: pyproject.toml  requirements.txt  test_cors.py  test_pdf.py
backend/api/: index.py
backend/src/app/: main.py
backend/src/app/agents/: quiz_generation_agent.py  text_summarizer_agent.py
backend/src/app/routes/: pdf_to_quiz.py  pdf_to_text.py  text_to_quiz.py
backend/src/app/schema/: pdf.py  quiz.py
backend/src/app/services/: openai_service.py  pdf_service.py  supabase_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/pdf-to-quiz/: page.tsx
frontend/app/pdf-to-text/: page.tsx
frontend/app/text-to-quiz/: page.tsx
frontend/components/: ExamPrepSection.tsx  FAQSection.tsx  FinalCTA.tsx  HeroDemo.tsx  Navbar.tsx  PageLayout.tsx  PricingSection.tsx  SiteShell.tsx  Storyboard.tsx  Testimonials.tsx  ThemeSwitcher.tsx  ToolCards.tsx  UploadFlowDemo.tsx
frontend/lib/: config.ts  theme.ts
